Fix navbar brand text hide on narrow screens

--- a/client/common/blocks/navbar/navbar.styl
+++ b/client/common/blocks/navbar/navbar.styl
@@ -42,6 +42,9 @@
   // align toggler to the right without using float
   .navbar-header
     text-align right
+  // but still keep left align in brand to hide shifted text
+  .navbar-brand
+    text-align left
 
   // make default navbar links display block at chosen breakpoint, copied from
   // https://github.com/twbs/bootstrap/issues/17532#issuecomment-220604022
